--- a/CV_Hamidreza Souzangarzadeh.tex
+++ b/CV_Hamidreza Souzangarzadeh.tex
@@ -117,7 +117,7 @@
 
 \cvlinkedin{https://www.linkedin.com/in/hamid-souzangar-95b197195/}{Linkedin}
 
-%\cvgit{https://github.com/hamidsouzangar}{Github}
+\cvgit{https://github.com/hamidsouzangar}{Github}
 
 \cvResearchGate{https://www.researchgate.net/profile/Hamidreza-Souzangarzadeh}{ResearchGate}
 
@@ -283,32 +283,32 @@
 %-------------------------------------------------------------------------------------
 %                                    References
 %-------------------------------------------------------------------------------------    
-      \profilesection{References}
+%      \profilesection{References}
 
- \myreference
-             {[1]}
-             {Prof.}
-             {M.J Rezvani}
-             {Department of Mechanical Engineering, IAU, Iran}
-             {m.rezvani@semnaniau.ac.ir}
-             {rezvani57@gmail.com}
-             \\
-\myreference
-             {[2]}
-             {Prof.}
-             {Ali Jahan}
-             {Department of Industrial  Engineering, IAU, Iran}
-             {A.jahan@semnaniau.ac.ir}
-             {Iranalijahan@yahoo.com}
-             \\
+% \myreference
+%             {[1]}
+%             {Prof.}
+%             {M.J Rezvani}
+%             {Department of Mechanical Engineering, IAU, Iran}
+%             {m.rezvani@semnaniau.ac.ir}
+%             {rezvani57@gmail.com}
+%             \\
+%\myreference
+%             {[2]}
+%             {Prof.}
+%             {Ali Jahan}
+%             {Department of Industrial  Engineering, IAU, Iran}
+%             {A.jahan@semnaniau.ac.ir}
+%             {Iranalijahan@yahoo.com}
+%             \\
 
-\myreference
-             {[3]}
-             {Prof.}
-             {Abbas S. Milani}
-             {School of Engineering, UBC, Kelowna,  Canada}
-             {Abbas.milani@ubc.ca}
-             {}
+%\myreference
+%             {[3]}
+%             {Prof.}
+%             {Abbas S. Milani}
+%             {School of Engineering, UBC, Kelowna,  Canada}
+%             {Abbas.milani@ubc.ca}
+%             {}
 
            
 
@@ -348,8 +348,8 @@
 
 %	\profilesection{Memberships}
 %	\begin{memberships}
+	%		\membership[4em]{pics/logo.png}{Some longer text spanning over more than
 %		\membership[4em]{pics/logo.png}{PandaScience.net}
-%		\membership[4em]{pics/logo.png}{Some longer text spanning over more than
 %			only one line}
 %	\end{memberships}
 %}
@@ -514,31 +514,36 @@
 %% --------------------------Research Interest--------------------------------
 %-------------------------------------------------------------------------
 
-\cvsection{Research Interest}
-\begin{multicols}{2}
+\cvsection{Professional Interests}
+\begin{multicols}{3}
+	\small
 \begin{itemize}
 % \item Industry 4.0
-% \item Product development
-% \item manufacturing
-%\item Crashworthiness 
+ \item { Product development}
+ \item Design engineering 
+ %\item Manufacturing
+ \item Operations Research
+
 %\item Gear design
 \item Robotics
-%\item Operations Research
+
 % \item Decision-making
 %\item Optimization
  \item Solid Mechanics
+ \item Crashworthiness 
 %\item Experimental Mechanics
 \item Numerical Modeling
 %\item Finite Element Modeling
 %\item Operations Research
 %\item Biomaterials
  \item Machine learning
- \item Design engineering 
+
 %\item Topology optimization
 %  \item Optimization
 %  \item CAD/CAM
 %\item Deformation Mechanisms
- \item Additive manufacturing
+\item 3D-printing
+% \item Additive manufacturing
 \end{itemize}
 \end{multicols}
 
